Fix: Iframe Overflow
Criei um container para o iframe, pois estava estourando e não acompanhando o tamanho do grid.

--- a/assets/css/mobilefirst.css
+++ b/assets/css/mobilefirst.css
@@ -159,11 +159,19 @@ Lista de Links - Card List
 /*=======================================================================================================
 VIDEO
 =======================================================================================================*/
-#video iframe{
-    min-width: 350px;
-    max-width: 600px;
-    min-height: 231px;
-    flex: 1;
+.video-container{
+    position: relative;
+    width: 100%;
+    margin: auto;
+    aspect-ratio: 16/9;
+}
+
+.video-container iframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 /*=======================================================================================================
